update seller